--- a/css-class/style.css
+++ b/css-class/style.css
@@ -10,7 +10,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
   line-height: 1.6;
-  min-height: 100vh;
+  min-height: 200vh;
   color: #ffffff;
   background: #111;
   display: flex;
@@ -28,7 +28,19 @@ body {
 }
 
 .box{
-    margin: 40px;
+    /* margin: 40px; */
     border: 10px solid white;
     padding: 20px;
+}
+
+/* .box{
+    position: absolute;
+    bottom: 500px;
+    right: 20px;
+    z-index: -5;
+} */
+
+.box{
+    position: sticky;
+    top: 250px;
 }
